--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
     />
 
     <!-- Icon -->
-    <link rel="icon" type="image/ico" href="/favicon.ico" sizes="48x48" />
     <link rel="icon" type="image/png" href="/icon1.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="/icon2.png" sizes="32x32" />
     <link
       rel="apple-touch-icon"
       href="/apple-icon.png"
@@ -35,7 +33,7 @@
     />
 
     <!-- Title -->
-    <title>Nova | 3D Animated Gaming Website</title>
+    <title>Câu lạc bộ esports THPT Trần Phú</title>
   </head>
   <body>
     <div id="root"></div>
